# takco

./: .gitignore  .readthedocs.yaml  LICENCE  README.md  README.rst  candidates-analysis.ipynb  candidates.py  convert_table_csv_sti.py  disambiguate.py  environment.yml  error-analysis-app.py  error-analysis.py  es_index_labeldocs.py  es_index_subjectdocs.py  index.ipynb  kb.ipynb  kb_to_subjectdocs.py  make_db.py  make_synonym_file.py  match.py  match_indexed.py  newentities.py  prop-analysis.py  rank_triples_with_embeddings.ipynb  renew_score_all.sh  requirements.txt  setup.cfg  setup.py  sim-tsne.ipynb  table-filter.ipynb  triple-analysis.ipynb  webaroo-gs.ipynb
app/: app.py  data.py  main.py  stats.py
app/templates/: base.html  dataset.html  home.html  table.html
data/: get_t2k.sh
docs/: Makefile  _static  conf.py  design.rst  index.rst  requirements.txt  setup.rst
docs/api/: conf.py  index.rst  (+68 more)
experiments/: README.md  kb_to_labeldocs.py  lcwa-predict.py  lookup_dbpedia_wikidata_uri.py  match.py  renew_scores.py  triple-analysis.py  util.py
resources/: config-chartedIn.toml  config-dbpedia.toml  config-semtab.toml  config-wikidata.toml  datasets.toml  executors.toml  pivot-annotation-precision.json  pivot-annotation-recall.json  t2d_fix.csv
t2k/: make_t2d_v1ex.py  make_t2k_triples.py  run_t2k_match.py  run_t2k_match_v0  run_t2k_match_v1  run_t2k_match_v2
takco/: __init__.py  __main__.py  config.py  linkedstring.py  pages.py  storage.py  table.py  util.py
templates/: index.html  table.html  triples.html
tests/: test_benchmarks.py  test_link.py
(+118 files in other folders)
