[aliases]
test=pytest
docs=build_sphinx

[build_sphinx]
project = takco
source-dir = docs
build-dir = docs/_build
all-files = 1
fresh-env = 1

[metadata]
license-file = LICENSE

[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff --nbval
testpaths = takco tests notebooks
markers =
    slow: marks tests as slow
filterwarnings =
    ignore:.*:DeprecationWarning

[mypy]
ignore_missing_imports = True